update year shortcode for block themes

--- a/lib/footer.html
+++ b/lib/footer.html
@@ -1,6 +1,6 @@
 <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"center"}} -->
 <div class="wp-block-group"><!-- wp:paragraph -->
-<p>Copyright [this_year].</p>
+  <p>Copyright [year].</p>
 <!-- /wp:paragraph -->
 
 <!-- wp:site-logo /-->
